--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Artem Pakhomov - Software Engineer, Co-owner Charity Foundation</title>
 </head>
 <body>
-<h1>Hello, world!</h1>
+<main>
+    <section>
+        <hr>
+        <div class="container-sm">
+            <h2>Artem Pakhomov</h2>
+            <p class="lead">Software Engineer, Co-owner Charity Foundation</p>
+            <div class="accordion" id="accordionSetnemo">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingJob">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseJob" aria-expanded="true" aria-controls="collapseJob">
+                            Software Engineering
+                        </button>
+                    </h2>
+                    <div id="collapseJob" class="accordion-collapse collapse show" aria-labelledby="headingJob"
+                         data-bs-parent="#accordionSetnemo">
+                        <div class="accordion-body">
+                            I was working in <strong>web industry</strong> since 2015. You can check my CV by this <a
+                                target="_blank" href="https://github.com/setnemo/cv/blob/main/PHP_Pakhomov_CV.pdf"
+                                class="">link</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingHeart">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseHeart" aria-expanded="false" aria-controls="collapseHeart">
+                            Volunteering
+                        </button>
+                    </h2>
+                    <div id="collapseHeart" class="accordion-collapse collapse" aria-labelledby="headingHeart"
+                         data-bs-parent="#accordionSetnemo">
+                        <div class="accordion-body">
+                            I was co-owner <a target="_blank" href="https://thevictory.org.ua/en">Charity Foundation
+                            "Let's see the
+                            Victory"</a>.
+
+                            The mission of our Charitable Foundation is to help people who lost their sight during the
+                            war. Unfortunately, eye transplantation is impossible, so people's lives change radically
+                            after such an injury.
+
+                            The Foundation is engaged in the search for necessary rehabilitation programs and modern
+                            vision restoration technologies in Ukraine and abroad, as well as the implementation of
+                            existing methods and technologies for vision restoration and rehabilitation of blind people
+                            in Ukraine.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingCommunications">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseCommunications" aria-expanded="false" aria-controls="collapseCommunications">
+                            Social Media
+                        </button>
+                    </h2>
+                    <div id="collapseCommunications" class="accordion-collapse collapse" aria-labelledby="headingCommunications"
+                         data-bs-parent="#accordionSetnemo">
+                        <div class="accordion-body">
+                            <h5><a href="https://www.facebook.com/setnemo/"><span class="badge rounded-pill bg-primary"><i class="fa fa-facebook-official"></i> Facebook</span></a></h5>
+                            <h5><a href="https://www.instagram.com/setnemo/"><span class="badge rounded-pill bg-danger"><i class="fa fa-instagram"></i> Instagram</span></a></h5>
+                            <h5><a href="https://www.linkedin.com/in/setnemo/"><span class="badge rounded-pill bg-light text-dark"><i class="fa fa-linkedin-square"></i> Linkedin</span></a></h5>
+                            <h5><a href="https://bsky.app/profile/setnemo.online"><span class="badge rounded-pill bg-secondary"><i class="fa fa-spinner"></i> BlueSky</span></a></h5>
+                            <h5><a href="https://twitter.com/setnemo"><span class="badge rounded-pill bg-info text-dark"><i class="fa fa-twitter-square"></i> Twitter</span></a></h5>
+                            <h5><a href="https://github.com/setnemo/"><span class="badge rounded-pill bg-dark"><i class="fa fa-github"></i> Github</span></span></a></h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
