--- a/app/index.html
+++ b/app/index.html
@@ -67,12 +67,12 @@
                     <div id="collapseCommunications" class="accordion-collapse collapse" aria-labelledby="headingCommunications"
                          data-bs-parent="#accordionSetnemo">
                         <div class="accordion-body">
-                            <h5><a href="https://www.facebook.com/setnemo/"><span class="badge rounded-pill bg-primary"><i class="fa fa-facebook-official"></i> Facebook</span></a></h5>
-                            <h5><a href="https://www.instagram.com/setnemo/"><span class="badge rounded-pill bg-danger"><i class="fa fa-instagram"></i> Instagram</span></a></h5>
-                            <h5><a href="https://www.linkedin.com/in/setnemo/"><span class="badge rounded-pill bg-light text-dark"><i class="fa fa-linkedin-square"></i> Linkedin</span></a></h5>
-                            <h5><a href="https://bsky.app/profile/setnemo.online"><span class="badge rounded-pill bg-secondary"><i class="fa fa-spinner"></i> BlueSky</span></a></h5>
-                            <h5><a href="https://twitter.com/setnemo"><span class="badge rounded-pill bg-info text-dark"><i class="fa fa-twitter-square"></i> Twitter</span></a></h5>
-                            <h5><a href="https://github.com/setnemo/"><span class="badge rounded-pill bg-dark"><i class="fa fa-github"></i> Github</span></span></a></h5>
+                            <h5><a href="https://www.facebook.com/setnemo/" target="_blank"><span class="badge rounded-pill bg-primary"><i class="fa fa-facebook-official"></i> Facebook</span></a></h5>
+                            <h5><a href="https://www.instagram.com/setnemo/" target="_blank"><span class="badge rounded-pill bg-danger"><i class="fa fa-instagram"></i> Instagram</span></a></h5>
+                            <h5><a href="https://www.linkedin.com/in/setnemo/" target="_blank"><span class="badge rounded-pill bg-light text-dark"><i class="fa fa-linkedin-square"></i> Linkedin</span></a></h5>
+                            <h5><a href="https://bsky.app/profile/setnemo.online" target="_blank"><span class="badge rounded-pill bg-secondary"><i class="fa fa-spinner"></i> BlueSky</span></a></h5>
+                            <h5><a href="https://twitter.com/setnemo" target="_blank"><span class="badge rounded-pill bg-info text-dark"><i class="fa fa-twitter-square"></i> Twitter</span></a></h5>
+                            <h5><a href="https://github.com/setnemo/" target="_blank"><span class="badge rounded-pill bg-dark"><i class="fa fa-github"></i> Github</span></span></a></h5>
                         </div>
                     </div>
                 </div>
