--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
                          data-bs-parent="#accordionSetnemo">
                         <div class="accordion-body">
                             <h5><a href="https://www.linkedin.com/in/setnemo/" target="_blank"><span class="badge rounded-pill bg-light text-dark"><i class="fa fa-linkedin-square"></i> Linkedin</span></a></h5>
+                            <h5><a href="https://x.com/setnemo" target="_blank"><span class="badge rounded-pill bg-primary"><i class="fa fa-twitter"></i>Xwitter</span></span></a></h5>
                             <h5><a href="https://bsky.app/profile/setnemo.online" target="_blank"><span class="badge rounded-pill bg-secondary"><i class="fa fa-spinner"></i> BlueSky</span></a></h5>
                             <h5><a href="https://github.com/setnemo/" target="_blank"><span class="badge rounded-pill bg-dark"><i class="fa fa-github"></i> Github</span></span></a></h5>
                         </div>
