--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,17 @@
 <main>
     <section>
         <hr>
-        <div class="container-sm">
-            <h2>Artem Pakhomov</h2>
-            <p class="lead">Software Engineer, Co-owner Charity Foundation</p>
+        <div class="container">
+            <div class="row m-2">
+                <div class="col-lg-1 col-md-3 col-sm-3 col-4">
+                    <img src="/images/logo.png" data-bs-toggle="modal" data-bs-target="#userEditModal" alt="avatar"
+                         class="rounded-circle img-fluid">
+                </div>
+                <div class="col-lg-11 col-md-9 col-sm-9 col-8">
+                    <h2>Artem Pakhomov</h2>
+                    <p class="lead">Software Engineer, Co-owner Charity Foundation</p>
+                </div>
+            </div>
             <div class="accordion" id="accordionSetnemo">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingJob">
@@ -42,35 +50,56 @@
                     <div id="collapseHeart" class="accordion-collapse collapse" aria-labelledby="headingHeart"
                          data-bs-parent="#accordionSetnemo">
                         <div class="accordion-body">
-                            I was co-owner <a target="_blank" href="https://thevictory.org.ua/en">Charity Foundation
-                            "Let's see the
-                            Victory"</a>.
+                            <h5>Support volunteering</h5>
+                            <p>I created a service for volunteers <a target="_blank" href="https://donater.com.ua">donater.com.ua</a>,
+                                that allows their donors to make a volunteer donation with a schedule via a Telegram bot.
+                                Volunteers open new and close old fundraisings, but the service understands actual
+                                fundraising and sends donors links to the current mono-jar.
+                            </p>
+                            <h5>Charity Foundation</h5>
+                            <p>
+                                I was co-owner of the <a target="_blank" href="https://thevictory.org.ua/en">Charity
+                                Foundation "Let's see the Victory"</a>.
+                            </p>
+                            <p>
+                                The mission of our Charitable Foundation is to help people who lost their sight during
+                                the war. Unfortunately, eye transplantation is impossible, so people's lives change
+                                radically after such an injury.
+                            </p>
+                            <p>
+                                The Foundation is engaged in the search for necessary rehabilitation programs and modern
+                                vision restoration technologies in Ukraine and abroad, as well as in implementing
+                                existing methods and technologies for vision restoration and rehabilitation of blind
+                                people in Ukraine.
 
-                            The mission of our Charitable Foundation is to help people who lost their sight during the
-                            war. Unfortunately, eye transplantation is impossible, so people's lives change radically
-                            after such an injury.
-
-                            The Foundation is engaged in the search for necessary rehabilitation programs and modern
-                            vision restoration technologies in Ukraine and abroad, as well as the implementation of
-                            existing methods and technologies for vision restoration and rehabilitation of blind people
-                            in Ukraine.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingCommunications">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseCommunications" aria-expanded="false" aria-controls="collapseCommunications">
+                                data-bs-target="#collapseCommunications" aria-expanded="false"
+                                aria-controls="collapseCommunications">
                             Social Media
                         </button>
                     </h2>
-                    <div id="collapseCommunications" class="accordion-collapse collapse" aria-labelledby="headingCommunications"
+                    <div id="collapseCommunications" class="accordion-collapse collapse"
+                         aria-labelledby="headingCommunications"
                          data-bs-parent="#accordionSetnemo">
                         <div class="accordion-body">
-                            <h5><a href="https://www.linkedin.com/in/setnemo/" target="_blank"><span class="badge rounded-pill bg-light text-dark"><i class="fa fa-linkedin-square"></i> Linkedin</span></a></h5>
-                            <h5><a href="https://x.com/setnemo" target="_blank"><span class="badge rounded-pill bg-primary"><i class="fa fa-twitter"></i> Xwitter</span></span></a></h5>
-                            <h5><a href="https://bsky.app/profile/setnemo.online" target="_blank"><span class="badge rounded-pill bg-secondary"><i class="fa fa-spinner"></i> BlueSky</span></a></h5>
-                            <h5><a href="https://github.com/setnemo/" target="_blank"><span class="badge rounded-pill bg-dark"><i class="fa fa-github"></i> Github</span></span></a></h5>
+                            <h5><a href="https://www.linkedin.com/in/setnemo/" target="_blank"><span
+                                    class="badge rounded-pill bg-light text-dark"><i class="fa fa-linkedin-square"></i> Linkedin</span></a>
+                            </h5>
+                            <h5><a href="https://x.com/setnemo" target="_blank"><span
+                                    class="badge rounded-pill bg-primary"><i
+                                    class="fa fa-twitter"></i> Xwitter</span></span></a></h5>
+                            <h5><a href="https://bsky.app/profile/setnemo.online" target="_blank"><span
+                                    class="badge rounded-pill bg-secondary"><i class="fa fa-spinner"></i> BlueSky</span></a>
+                            </h5>
+                            <h5><a href="https://github.com/setnemo/" target="_blank"><span
+                                    class="badge rounded-pill bg-dark"><i class="fa fa-github"></i> Github</span></span>
+                            </a></h5>
                         </div>
                     </div>
                 </div>
