--- a/app/index.html
+++ b/app/index.html
@@ -13,25 +13,26 @@
     <section>
         <hr>
         <div class="container">
-            <div class="row m-2">
+            <div class="row">
                 <div class="col-lg-1 col-md-3 col-sm-3 col-4">
-                    <img src="/images/logo.png" data-bs-toggle="modal" data-bs-target="#userEditModal" alt="avatar"
+                    <img src="/app/images/logo.png" data-bs-toggle="modal" data-bs-target="#userEditModal" alt="avatar"
                          class="rounded-circle img-fluid">
                 </div>
                 <div class="col-lg-11 col-md-9 col-sm-9 col-8">
                     <h2>Artem Pakhomov</h2>
+                    <p class="text-muted">@setnemo</p>
                     <p class="lead">Software Engineer, Co-owner Charity Foundation</p>
                 </div>
             </div>
             <div class="accordion" id="accordionSetnemo">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingJob">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseJob" aria-expanded="true" aria-controls="collapseJob">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseJob" aria-expanded="false" aria-controls="collapseJob">
                             Software Engineering
                         </button>
                     </h2>
-                    <div id="collapseJob" class="accordion-collapse collapse show" aria-labelledby="headingJob"
+                    <div id="collapseJob" class="accordion-collapse collapse " aria-labelledby="headingJob"
                          data-bs-parent="#accordionSetnemo">
                         <div class="accordion-body">
                             I was working in <strong>web industry</strong> since 2015. You can check my CV by this <a
@@ -42,17 +43,18 @@
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingHeart">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseHeart" aria-expanded="false" aria-controls="collapseHeart">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseHeart" aria-expanded="true" aria-controls="collapseHeart">
                             Volunteering
                         </button>
                     </h2>
-                    <div id="collapseHeart" class="accordion-collapse collapse" aria-labelledby="headingHeart"
+                    <div id="collapseHeart" class="accordion-collapse collapse show" aria-labelledby="headingHeart"
                          data-bs-parent="#accordionSetnemo">
                         <div class="accordion-body">
                             <h5>Support volunteering</h5>
                             <p>I created a service for volunteers <a target="_blank" href="https://donater.com.ua">donater.com.ua</a>,
-                                that allows their donors to make a volunteer donation with a schedule via a Telegram bot.
+                                that allows their donors to make a volunteer donation with a schedule via a Telegram
+                                bot.
                                 Volunteers open new and close old fundraisings, but the service understands actual
                                 fundraising and sends donors links to the current mono-jar.
                             </p>
@@ -88,18 +90,43 @@
                          aria-labelledby="headingCommunications"
                          data-bs-parent="#accordionSetnemo">
                         <div class="accordion-body">
-                            <h5><a href="https://www.linkedin.com/in/setnemo/" target="_blank"><span
-                                    class="badge rounded-pill bg-light text-dark"><i class="fa fa-linkedin-square"></i> Linkedin</span></a>
+                            <h5>
+                                <a href="https://www.linkedin.com/in/setnemo/" target="_blank">
+                                    <span class="badge rounded-pill bg-info text-dark">
+                                        <i class="fa fa-linkedin-square"></i> Linkedin
+                                    </span>
+                                </a>
                             </h5>
-                            <h5><a href="https://x.com/setnemo" target="_blank"><span
-                                    class="badge rounded-pill bg-primary"><i
-                                    class="fa fa-twitter"></i> Xwitter</span></span></a></h5>
-                            <h5><a href="https://bsky.app/profile/setnemo.online" target="_blank"><span
-                                    class="badge rounded-pill bg-secondary"><i class="fa fa-spinner"></i> BlueSky</span></a>
+                            <h5>
+                                <a href="https://github.com/setnemo/" target="_blank">
+                                    <span class="badge rounded-pill bg-dark">
+                                        <i class="fa fa-github"></i> Github
+                                    </span>
+                                </a>
                             </h5>
-                            <h5><a href="https://github.com/setnemo/" target="_blank"><span
-                                    class="badge rounded-pill bg-dark"><i class="fa fa-github"></i> Github</span></span>
-                            </a></h5>
+                            <h5>
+                                <a href="https://x.com/setnemo" target="_blank">
+                                    <span class="badge rounded-pill bg-success"><i class="fa fa-twitter"></i> Xwitter</span>
+                                </a>
+                            </h5>
+                            <h5>
+                                <a href="https://bsky.app/profile/setnemo.online" target="_blank">
+                                    <span class="badge rounded-pill bg-secondary"><i class="fa fa-spinner"></i> BlueSky
+                                    </span>
+                                </a>
+                            </h5>
+                            <h5>
+                                <a href="https://www.facebook.com/setnemo.online/" target="_blank">
+                                    <span class="badge rounded-pill bg-primary"><i class="fa fa-facebook"></i> Facebook
+                                    </span>
+                                </a>
+                            </h5>
+                            <h5>
+                                <a href="https://www.instagram.com/donater.com.ua/" target="_blank">
+                                    <span class="badge rounded-pill bg-danger"><i class="fa fa-instagram"></i> Instagram
+                                    </span>
+                                </a>
+                            </h5>
                         </div>
                     </div>
                 </div>
