--- a/app/index.html
+++ b/app/index.html
@@ -122,7 +122,7 @@
                                 </a>
                             </h5>
                             <h5>
-                                <a href="https://www.instagram.com/donater.com.ua/" target="_blank">
+                                <a href="https://www.instagram.com/setnemo/" target="_blank">
                                     <span class="badge rounded-pill bg-danger"><i class="fa fa-instagram"></i> Instagram
                                     </span>
                                 </a>
