--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-1 col-md-3 col-sm-3 col-4">
-                    <img src="/app/images/logo.png" data-bs-toggle="modal" data-bs-target="#userEditModal" alt="avatar"
+                    <img src="/images/logo.png" data-bs-toggle="modal" data-bs-target="#userEditModal" alt="avatar"
                          class="rounded-circle img-fluid">
                 </div>
                 <div class="col-lg-11 col-md-9 col-sm-9 col-8">
